Design 2 with no features

--- a/index.html
+++ b/index.html
@@ -3,25 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FeelSphere</title>
+    <title>FeelSphere - Welcome</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <header id="main-header">
-        </header>
-
-    <main id="app-container">
-        <div class="welcome-screen">
-            <h1>Welcome to FeelSphere</h1>
-            <h2>Your personal space for emotional well-being through interactive stories.</h2>
-            <button class="start-button">Start Your Journey</button>
-        </div>
+    <main class="page-container welcome-page">
+        <h1 class="fade-in">Welcome to FeelSphere</h1>
+        <p class="fade-in-delay">"The only way out is through." - Robert Frost</p>
+        <a href="questions.html" class="start-button fade-in-delay">Start Your Journey</a>
     </main>
-
-    <footer id="main-footer">
-        </footer>
-
-    <script src="script.js"></script>
+    
 </body>
 </html>
