Phase 2 development done

--- a/questions.html
+++ b/questions.html
@@ -18,11 +18,10 @@
             </h2>
             <p id="question-text" class="text-lg text-gray-700 dark:text-gray-300 mb-8"></p>
             
-            <div id="options-container" class="space-y-4">
-                </div>
-
+            <div id="options-container" class="space-y-4"></div>
+            
             <div id="more-input-container" class="hidden mt-4">
-                <textarea id="more-input" class="w-full p-4 border rounded-lg dark:bg-gray-700 dark:text-gray-300 dark:border-gray-600" placeholder="Share your thoughts..."></textarea>
+                <textarea id="more-input" rows="4" class="w-full px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-gray-800 dark:text-gray-200" placeholder="Type here..."></textarea>
             </div>
 
             <button id="next-button" class="start-button mt-8 hidden">Next</button>
