--- a/questions.html
+++ b/questions.html
@@ -9,7 +9,7 @@
 <body>
 
     <main class="page-container questions-page">
-        <h2>How are you feeling right now?</h2>
+        <h2>How are you feeling right now ...?</h2>
         <form id="mood-form">
             <div class="mood-options">
                 <label><input type="radio" name="mood" value="anxious"> Anxious</label>
@@ -18,7 +18,7 @@
                 <label><input type="radio" name="mood" value="hopeful"> Hopeful</label>
             </div>
             
-            <h3>Can you tell us a bit more?</h3>
+            <h3>Can you tell us a bit more ..?</h3>
             <textarea id="mood-input" placeholder="e.g., Anxious about an exam, or happy after a good conversation..."></textarea>
             
             <button type="submit" class="submit-button">Generate Your Story</button>
