--- a/questions.html
+++ b/questions.html
@@ -27,7 +27,6 @@
             <button id="next-button" class="start-button mt-8 hidden">Next</button>
         </div>
     </div>
-    <script src="scripts.js"></script>
+    <script src="questions.js"></script>
 </body>
 </html>
-<!--Heavenly Vibes-->
