--- a/questions.html
+++ b/questions.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FeelSphere - Find Your Story</title>
     <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,9 +15,9 @@
     <div class="main-container">
         <div class="content-card">
             <h2 id="question-title" class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-indigo-600 mb-6">
-                Tell Me About Your World
+                <!-- Tell Me About Your World -->
             </h2>
-            <p id="question-text" class="text-lg text-gray-700 dark:text-gray-300 mb-8"></p>
+            <p id="question-text" class="text-lg text-gray-700 dark:text-gray-300 mb-8">   </p>
             
             <div id="options-container" class="space-y-4"></div>
             
