--- a/questions.html
+++ b/questions.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-100 flex flex-col justify-center items-center p-4">
+<body class="flex flex-col justify-center items-center p-4">
     <div class="main-container">
         <div class="content-card">
             <h2 id="question-title" class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-indigo-600 mb-6"></h2>
